# StrukturyDanychProj1Lista_Tablica

./: .gitignore  CMakeLists.txt  cell.h
DATA/: dane.txt
inc/: ArrayList.hpp  Menu.hpp  cell.h  doubleLinkedList.h  interface.h  singleLinkedList.h  tempCodeRunnerFile.h
src/: main.cpp  main1.cpp  singleLinkedList.cpp  tempCodeRunnerFile.cpp
